[package]
name = "esp32c3-embassy-demo"
version = "0.1.0"
authors = ["intent <zzy.main@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.10.0", features = ["esp32c3", "log"] }
embassy-executor = { version = "0.5.0" }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", default-features = false }
heapless = "0.8.0"
esp-hal = { version = "0.19.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32c3", "integrated-timers"] }
static_cell = "2.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
