[package]
name = "esp32c3-fm"
version = "0.1.0"
authors = ["intent <zzy.main@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.10.0", features = ["esp32c3", "log"] }
esp-hal = { version = "0.19.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32c3", "integrated-timers"] }
# embassy
embassy-executor = { version = "0.5.0" }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", default-features = false }
static_cell = "2.1.0"
# rda5807m
rda5807m = { version = "0.1.0", path = "../rda5807m" }
# ssd1360
ssd1306-i2c = "0.1"
embedded-graphics = "0.8.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
